--- a/frontend-vue/src/assets/styles.css
+++ b/frontend-vue/src/assets/styles.css
@@ -30,3 +30,21 @@ a.router-link-active {
   box-shadow: none;
   outline: none;
 }
+
+/*
+  Estilização do botão padrão
+*/
+.botao {
+  background-color: var(--main-color);
+  color:#fff;
+  border: 1px solid var(--main-color);
+}
+
+.botao:hover,
+.botao:active {
+  background-color: var(--main-hover) !important;
+  color: #fff;
+  outline: none;
+  box-shadow: none;
+  border: 1px solid var(--main-hover) !important;
+}
